[project]
name = "hello-langgraph"
version = "1.0.0"
description = "A test bed for LangGraph"
authors = [{ name = "Sumit Sahoo", email = "sumitsahoo1988@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "langgraph>=0.4.7,<0.5",
    "dotenv>=0.9.9,<0.10",
    "langchain-openai>=0.3.18,<0.4",
    "requests>=2.32.3,<3",
    "rich>=14.0.0,<15",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "pyrefly>=0.17.0,<0.18",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyrefly]
python_interpreter = "./.venv/bin/python"
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
